	PR c++/20142 	* cp-tree.h (target_type): Remove. 	* decl.c (layout_var_decl): Remove #if 0'd code. 	(cp_finish_decl): Remove dead code. 	* init.c (build_vec_init): When determining whether or not the 	element type has an asignment operator, look through all array 	dimensions. 	* typeck.c (target_type): Remove.

PR c++/20142
	* g++.dg/init/array18.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96170 138bc75d-0d04-0410-961f-82ee72b054a4